namespace ProgrammingLearningApp.Models
{
	public enum Condition
	{
		WallAhead,
		GridEdge
	}
}